fix manpage typo

--- a/no/no.1
+++ b/no/no.1
@@ -9,7 +9,7 @@ command. It does not provide strong security against a malicious process
 attempting to subvert a sandbox. However its security boundary should be
 sufficient to prevent buggy or simple unwanted behaviour.
 .SH OPTIONS
-\fB--[allow|disalllow]-network\fR
+\fB--[allow|disallow]-network\fR
 .RS
 Enable or disable use of networking by the command. The default is to disallow
 networking.
