wire up --debug to debug mode

--- a/no/no.1
+++ b/no/no.1
@@ -31,6 +31,11 @@ subsequent \fB--allow-tmp-writes\fR will override this specifically for
 \fB$TMPDIR\fR.
 .RE
 .PP
+\fB--debug\fR
+.RS
+Enable debug mode. This is currently unimplemented.
+.RE
+.PP
 .SH AUTHOR
 All comments, questions and complaints should be directed to Matthew Fernandez
 <matthew.fernandez@gmail.com>.
